--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,8 @@
     <string name="menu_settings">Settings</string>
     <string name="title_activity_finger_paint">手書きメモ(授業)</string>
     <string name="menu_save">保存</string>
+    <string name="button_up">上のフォルダー</string>
+    <string name="filelist_empty">ファイルがありません</string>
+    <string name="menu_open">開く</string>
 
 </resources>
