--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,5 +9,10 @@
     <string name="filelist_empty">ファイルがありません</string>
     <string name="menu_open">開く</string>
     <string name="menu_color_change">色の変更</string>
+    <string name="menu_new">新規作成</string>
+    <string name="confirm_new">現在の作業内容が失われます。よろしいですか。</string>
+    <string name="button_ok">OK</string>
+    <string name="button_cancel">キャンセル</string>
+    <string name="titlle_exit">終了</string>
 
 </resources>
